--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 # Which compiler to use
-CC = clang-3.6
+CC = clang
 
 # Compiler flags go here.
 CFLAGS = -g -Wall
@@ -25,7 +25,7 @@ $(TARGET): $(ELEVOBJ)
 
 # Compile: create object files from C source files.
 %.o : %.c
-	$(CC) $(CFLAGS) -c $< -o $@ 
+	$(CC) $(CFLAGS) -c $< -o $@
 
 # rule for cleaning re-compilable files.
 clean:
